--- a/src/binwalk/config/extract.conf
+++ b/src/binwalk/config/extract.conf
@@ -30,7 +30,7 @@
 ^lzma compressed data:7z:7z e -y '%e':0,1
 ^xz compressed data:xz:7z e -y '%e':0,1
 ^bzip2 compressed data:bz2:bzip2 -d '%e'
-^compress'd data:Z:gzip -d '%e'
+^compressed data:Z:gzip -d '%e'
 ^posix tar archive:tar:tar xvf '%e'
 ^rar archive data:rar:unrar e '%e'
 ^rar archive data:rar:unrar -x '%e' # This is for the 'free' version
